--- a/3CSS&Typography/04_Buttons-css/styles.css
+++ b/3CSS&Typography/04_Buttons-css/styles.css
@@ -1,35 +1,21 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("./fonts/Roboto-Light.ttf");
-  font-weight: 300;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("./fonts/Roboto-Regular.ttf");
-  font-weight: 400;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("./fonts/Roboto-Italic.ttf");
-  font-weight: 400;
-  font-style: italic;
-}
-@font-face {
-  font-family: "Roboto";
-  src: url("./fonts/Roboto-Bold.ttf");
-  font-weight: 700;
-}
+@import 'https://use.fontawesome.com/releases/v5.10.2/css/all.css';
+
 
 body {
   background-color: lightgrey;
+
 }
 
 body * {
   font-family: Roboto, sans-serif;
 }
 
-#normal .button {
+  .button {
+    cursor: pointer;
+    outline: none;
+  }
 
+#normal .button {
   border: 1px solid black;
   border-radius: 12px;
   padding: 3px 6px;
@@ -41,7 +27,8 @@ body * {
 }
 
 #filled .button,
-#icon .button {
+#icon .button
+{
     font-size: 1rem;
     text-decoration: none;
   border: 1px solid black;
@@ -50,13 +37,28 @@ body * {
   background-color: rgb(51, 51, 51);
   color: rgb(255, 255, 255);
   margin-right: 6px;
-
-  cursor: pointer;
+ 
 }
 
-#filled .button:hover,
-#icon .button:hover{
+#normal button.button.hover:hover{
 
+  color:  rgb(0,102,0);
+}
+
+#icon button.button.icon.hover:hover,
+#filled button.button.fill.hover:hover
+ {
     background-color: rgb(0,102,0);
+}
+
+body .hover{
+
+  color: rgb(51, 51, 51);
+}
+
+
+.button.fill.hover {
+
+   color: rgb(251, 251, 251);
 }
 
