--- a/5Position&Grid/05_New-Offer/styles.css
+++ b/5Position&Grid/05_New-Offer/styles.css
@@ -1,1 +1,13 @@
-//TODO
+
+main {
+width: 700px;
+height: 500px;
+margin: 60px;
+
+}
+
+img.new{
+    position: relative;
+    top: -200px;
+    right: 150px;
+}
