--- a/Exam/03. inTime-Company/styles.css
+++ b/Exam/03. inTime-Company/styles.css
@@ -122,6 +122,7 @@ body > main > section.hero > nav > ul > li:nth-child(1) > a {
   flex-direction: column;
   align-items: center;
   margin-top: 7vh;
+  padding-bottom: 7vh;
 }
 
 .our_services .line {
@@ -172,14 +173,79 @@ body > main > section.hero > nav > ul > li:nth-child(1) > a {
 
 .subscribe {
   width: 100%;
-  height: 350px;
+  height: 200px;
   background-color: #393f43;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-/* .line {
-  content: '';
-  background-color:#2da2b5 ;
-  width: 15px;
-  height: 2px;
-} */
+.subscribe h2 {
+  color: white;
+}
+
+.subscribe_email {
+  margin-top: 1rem;
+}
+body > main > section.subscribe > div.line {
+  width: 80px;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  background-color: #f7f7f7;
+}
+
+body > main > section.subscribe > p {
+  color: white;
+}
+
+.subscribe_email input {
+  padding: 0.75%;
+
+  background-color: #545a5e;
+  border: none;
+  border-radius: 5px;
+  width: 40vw;
+  font-style: italic;
+}
+
+.subscribe_email button {
+  padding: 0.75%;
+  background-color: #6bbfff;
+  border: none;
+  border-radius: 5px;
+  width: 40vw;
+}
+
+.contacts {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #2f3539;
+  color: #dce4da;
+}
+
+.contacts a {
+  text-decoration: none;
+  color: #dce4da;
+}
+
+.contacts li {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+body > .contacts > ul:nth-child(4) > li:nth-child(2) i {
+  padding-left: 3px;
+}
+
+.rights {
+ padding-top: 1rem;
+ padding-bottom: 1rem;
+ font-size: 0.8rem;
+  width: 100vw;
+  background-color: #262b2f;
+  color: white;
+  text-align: center;
+}
+mark {
+  background-color: #262b2f;
+  color: #2da2b5;
+}
+
